assets/css/style.css
/* ... */
.nav li {
  font-size: 14px;
  padding: 0;
}
.nav-attach {
  font-size: 0;
}
.nav-box-first {
  background-color: #e5b7e9;
  color: black;
}
.nav-box-first:hover {
  background-color: #c97ad0;
  color: black;
}
.nav-box-second {
  background-color: #e5b7e9;
  color: black;
}
.nav-box-second:hover {
  background-color: #c97ad0;
  color: black;
}
.nav-box-third {
  background-color: #e5b7e9;
  color: black;
}
.nav-box-third:hover {
  background-color: #c97ad0;
  color: black;
}
.nav-box-fourth {
  background-color: #e5b7e9;
  color: black;
}
.nav-box-fourth:hover {
  background-color: #c97ad0;
  color: black;
}
.nav-box-active {
  background-color: #c97ad0;
  color: black;
}
.long-image {
  max-height: 603px;
  padding-bottom: 10px;
}
.main-page-background {
  background-image: url(../../assets/images/Cat-poke.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 603px;
  padding-bottom: 10px;
}
.adopting-panel {
  min-height: 403px;
  padding-bottom: 10px;
  display: inline-block;
}
.title {
  font-size: 50px;
  text-align: Center;
  padding: 20px;
}
.subtitle {
  font-size: 30px;
  text-align: center;
}

.subtitle a {
  text-decoration: none;
  color: #c97ad0;
}

.slogan {
  color: white;
  font-size: 30px;
  position: relative;
  width: 300px;
  height: 200px;
  padding-top: 40px;
  padding-left: 10px;
  bottom: 450px;
  left: 630px;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}
.support-slogan {
  color: black;
  font-size: 30px;
  position: relative;
  width: 300px;
  height: 200px;
  padding-top: 40px;
  padding-left: 10px;
  bottom: 450px;
  left: 430px;
}
.advice-slogan {
  color: white;
  font-size: 30px;
  position: relative;
  width: 300px;
  height: 200px;
  padding-top: 40px;
  padding-left: 10px;
  bottom: 600px;
  left: 790px;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.cat-details {
  text-align: Center;
}
.cat-box {
  position: relative;
  padding: 10px 25px;
  border: 0px;
  margin: 0px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
}
.salem-cat {
  background-image: url(../../assets/images/Salem.png);
}
.savannah-cat {
  background-image: url(../../assets/images/Savannah.jpg);
}
.charlie-cat {
  background-image: url(../../assets/images/charlie.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.donate-panel {
  min-height: 603px;
  padding-bottom: 10px;
  background-color: #e9e5b7;
}
.donate-details {
  text-align: Center;
}
.circle-image {
  position: relative;
  top: 20px;
  text-align: center;
  text-decoration: none;
}
.circle-image img {
  border-width: 1px;
  border-radius: 50%;
}

.left-circle {
  position: relative;
  left: 50px;
}
.middle-circle {
  top: 60px;
}
.right-circle {
  position: relative;
  right: 50px;
}
.upper-image {
  background: rgb(0, 0, 0);
  opacity: 0.9;
  background-image: url(../../assets/images/cage-cat.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 600px;
  padding-bottom: 20px;
}

.image-statement {
  text-align: center;
  min-width: 100px;
  max-width: 400px;
  padding: 10px;

  color: black;
  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
}

.image-statement h2 {
  font-size: 30px;
}

.upper-statement {
  position: relative;
  bottom: 500px;
  left: 1340px;
  background-color: rgba(5, 5, 5, 0.5);
}
.middle-image {
  background: rgb(0, 0, 0);
  opacity: 0.9;
  background-image: url(../../assets/images/Man-with-kitten.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 600px;
  padding-bottom: 20px;
}
.middle-statement {
  position: relative;
  bottom: 510px;
  left: 70px;
  background-color: rgba(66, 48, 7, 0.5);
}
.lower-image {
  background: rgb(0, 0, 0);
  opacity: 0.9;
  background-image: url(../../assets/images/vet-kitten.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 600px;
  padding-bottom: 20px;
}
.lower-statement {
  position: relative;
  bottom: 500px;
  left: 730px;
  background-color: rgba(95, 129, 241, 0.5);
}

.support-page-donate-panel {
  background-image: url(../../assets/images/kitten-group.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 603px;
  padding-bottom: 10px;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0.9;
}

/* used following website to figure out how to put borders around letters https://stackoverflow.com/questions/2570972/css-font-border */

.donate-title {
  font-size: 70px;
  font-weight: bold;
  text-align: Center;
  padding: 20px;
  position: relative;
  color: white;
  top: 10px;
  z-index: 1;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.donate-statement {
  font-size: 35px;
  text-align: Center;
  padding: 0px;
  position: relative;
  color: white;
  top: 10px;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.support-page-donate-panel button {
  position: relative;
  top: 150px;
  border-radius: 50%;
  height: 150px;
  width: 150px;
  font-size: 25px;
  border: 3px solid black;
}

.advice-page-background {
  background-image: url(../../assets/images/cat-fuss.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 603px;
  padding-bottom: 10px;
  background-color: rgb(0, 0, 0);
  opacity: 0.8;
}

.fundraising-background {
  min-height: 603px;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url(../../assets/images/kitty-flower.jpg);
  background-color: white;
  opacity: 0.8;
}
/* ... */

